Many fixes, including way to sort and display prices.